kubernetes/manifests/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: backend-certificate-manager
spec:
  tls:
    - hosts:
        - auth.${domain}
      secretName: letsencrypt-account-key
  ingressClassName: nginx
  rules:
  - host: auth.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
